# todo-app

./: .pre-commit-config.yaml  CTk examples.py  README.md  change_todo_infos.py  database.py  gui_items.py  new_todo.py  pyproject.toml  requirements.txt  run.py  todo.db  todo.py  utilities.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/to_do/: admin.py  models.py  urls.py  views.py
backend/to_do/migrations/: 0001_initial.py  0002_todoitem_time.py  0003_alter_todoitem_time.py  0004_alter_todoitem_time.py  0005_todoitem_created_at.py  0006_remove_todoitem_label_remove_todoitem_time_and_more.py  0007_rename_describtion_todoitem_description.py  0008_alter_todoitem_datetime.py
backend/to_do/templates/: delete_todo.html  edit_todo.html  new_todo.html  to_do.html  to_do_list.html
