[project]
name = "todo-app"
version = "0.0.1"
dependencies = [
  "django",
]
requires-python = ">=3.10"
author = [
  {name = "Max Konze", email = "max.konze@t-online.de"},
]
maintainers = [
  {name = "Max Konze", email = "max.konze@t-online.de"}
]
description = "A django based todo App for browser"
readme = "README.md"
license = {}
keywords = ["todo","todo-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Natural Language :: German",
    "Programming Language :: Python"
]

[project.urls]
Homepage = ""
Repository = "https://github.com/MaxKonze/todo-app"
Changelog = "https://github.com/MaxKonze/todo-app/blob/4a63ec60a69ce553f0bd75ebe7b1c30c595a10a9/Changelog.md"

[project.gui-scripts]
todo-gui = "manage:main"

[tool.black]
line-length = 120
target-version = ['py310']
multi_line_output = 3
include_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 120
known_first_party = 'webapp' # change with name of your app

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "N", "I", "B", "A", "DTZ", "DJ"]
ignore = [
    'N999',     # Project name contains underscore, not fixable
    'A003',     # Django attributes shadow python builtins
    'DJ001',    # Django model text-based fields shouldn't be nullable
    'DJ012',    # Odd ordering of Django model methods
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable =["E", "F", "W", "N", "I", "B", "A", "DTZ", "DJ"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
